--- a/ClusterSurveillance/MVVM/View/TroubleshootView.xaml
+++ b/ClusterSurveillance/MVVM/View/TroubleshootView.xaml
@@ -22,9 +22,183 @@
             <StackPanel Orientation="Vertical" HorizontalAlignment="Right" Margin="0,45">
                 
             </StackPanel>
+
             <ContentControl Content="{Binding CurrentView}" Grid.Column="1"/>
         </Grid>
         <Border Grid.Row="1" BorderBrush="#775A5961" BorderThickness="0,1,0,0"/>
+        <StackPanel Orientation="Vertical" MaxWidth="900" Grid.Row="1" Margin="0,40,0,0">
+            <Border BorderBrush="#775A5961" BorderThickness="0,0,0,1">
+                <Grid Margin="20,10">
+                    <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Left">
+                        <TextBlock Text="Restart Patisserie" Foreground="White" FontFamily="Poppins Medium" FontSize="14"  TextWrapping="WrapWithOverflow"/>
+                        <TextBlock Text="All pastries and settings will be preserved." Foreground="Gray" FontFamily="Poppins Medium" FontSize="12"  TextWrapping="WrapWithOverflow"/>
+                    </StackPanel>
+                    <Button HorizontalAlignment="Right" VerticalAlignment="Center" Content="Restart" Margin="5,0" FontFamily="Poppins" Height="35">
+                        <Button.Style>
+                            <Style TargetType="{x:Type Button}">
+                                <Style.Setters>
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type Button}">
+                                                <Grid>
+                                                    <Border BorderBrush="#FF0084FF" BorderThickness="1" CornerRadius="4">
+                                                        <Border.Background>
+                                                            <SolidColorBrush x:Name="BackgroundColor" Color="#000084FF"/>
+                                                        </Border.Background>
+                                                        <TextBlock Name="ButtonText" Text="{TemplateBinding Property=Content}" VerticalAlignment="Center" Margin="20,7">
+                                                            <TextBlock.Foreground>
+                                                                <SolidColorBrush Color="#FF0084FF"/>
+                                                            </TextBlock.Foreground>
+                                                        </TextBlock>
+                                                    </Border>
+                                                </Grid>
+
+                                                <ControlTemplate.Triggers>
+                                                    <Trigger Property="IsMouseOver" Value="True">
+                                                        <Trigger.EnterActions>
+                                                            <BeginStoryboard>
+                                                                <Storyboard>
+                                                                    <ColorAnimation Storyboard.TargetName="BackgroundColor"
+                                                    Storyboard.TargetProperty="Color"
+                                                    To="#120084FF" Duration="0:0:0.2"/>
+                                                                </Storyboard>
+                                                            </BeginStoryboard>
+                                                        </Trigger.EnterActions>
+                                                        <Trigger.ExitActions>
+                                                            <BeginStoryboard>
+                                                                <Storyboard>
+                                                                    <ColorAnimation Storyboard.TargetName="BackgroundColor"
+                                                    Storyboard.TargetProperty="Color"
+                                                    To="#000084FF" Duration="0:0:0.2"/>
+                                                                </Storyboard>
+                                                            </BeginStoryboard>
+                                                        </Trigger.ExitActions>
+                                                    </Trigger>
+                                                </ControlTemplate.Triggers>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style.Setters>
+                            </Style>
+                        </Button.Style>
+                    </Button>
+                </Grid>
+            </Border>
+            <Border BorderBrush="#775A5961" BorderThickness="0,0,0,1">
+                <Grid Margin="20,10">
+                    <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Left">
+                        <TextBlock Text="Support" Foreground="White" FontFamily="Poppins Medium" FontSize="14"  TextWrapping="WrapWithOverflow"/>
+                        <TextBlock Text="Get help with Patisserie." Foreground="Gray" FontFamily="Poppins Medium" FontSize="12"  TextWrapping="WrapWithOverflow"/>
+                    </StackPanel>
+                    <Button HorizontalAlignment="Right" VerticalAlignment="Center" Content="Get support" Margin="5,0" FontFamily="Poppins" Height="35">
+                        <Button.Style>
+                            <Style TargetType="{x:Type Button}">
+                                <Style.Setters>
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type Button}">
+                                                <Grid>
+                                                    <Border BorderBrush="#FF0084FF" BorderThickness="1" CornerRadius="4">
+                                                        <Border.Background>
+                                                            <SolidColorBrush x:Name="BackgroundColor" Color="#000084FF"/>
+                                                        </Border.Background>
+                                                        <TextBlock Name="ButtonText" Text="{TemplateBinding Property=Content}" VerticalAlignment="Center" Margin="20,7">
+                                                            <TextBlock.Foreground>
+                                                                <SolidColorBrush Color="#FF0084FF"/>
+                                                            </TextBlock.Foreground>
+                                                        </TextBlock>
+                                                    </Border>
+                                                </Grid>
+
+                                                <ControlTemplate.Triggers>
+                                                    <Trigger Property="IsMouseOver" Value="True">
+                                                        <Trigger.EnterActions>
+                                                            <BeginStoryboard>
+                                                                <Storyboard>
+                                                                    <ColorAnimation Storyboard.TargetName="BackgroundColor"
+                                                    Storyboard.TargetProperty="Color"
+                                                    To="#120084FF" Duration="0:0:0.2"/>
+                                                                </Storyboard>
+                                                            </BeginStoryboard>
+                                                        </Trigger.EnterActions>
+                                                        <Trigger.ExitActions>
+                                                            <BeginStoryboard>
+                                                                <Storyboard>
+                                                                    <ColorAnimation Storyboard.TargetName="BackgroundColor"
+                                                    Storyboard.TargetProperty="Color"
+                                                    To="#000084FF" Duration="0:0:0.2"/>
+                                                                </Storyboard>
+                                                            </BeginStoryboard>
+                                                        </Trigger.ExitActions>
+                                                    </Trigger>
+                                                </ControlTemplate.Triggers>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style.Setters>
+                            </Style>
+                        </Button.Style>
+                    </Button>
+                </Grid>
+            </Border>
+            <Border BorderBrush="#775A5961" BorderThickness="0,0,0,1">
+                <Grid Margin="20,10">
+                    <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Left">
+                        <TextBlock Text="Reset to factory defaults" Foreground="White" FontFamily="Poppins Medium" FontSize="14"  TextWrapping="WrapWithOverflow"/>
+                        <TextBlock Text="All settings and data will be removed." Foreground="Gray" FontFamily="Poppins Medium" FontSize="12"  TextWrapping="WrapWithOverflow"/>
+                    </StackPanel>
+                    <Button HorizontalAlignment="Right" VerticalAlignment="Center" Content="Reset to factory defaults" Margin="5,0" FontFamily="Poppins" Height="35">
+                        <Button.Style>
+                            <Style TargetType="{x:Type Button}">
+                                <Style.Setters>
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type Button}">
+                                                <Grid>
+                                                    <Border BorderBrush="#FFFF4400" BorderThickness="1" CornerRadius="4">
+                                                        <Border.Background>
+                                                            <SolidColorBrush x:Name="BackgroundColor" Color="#000084FF"/>
+                                                        </Border.Background>
+                                                        <TextBlock Name="ButtonText" Text="{TemplateBinding Property=Content}" VerticalAlignment="Center" Margin="20,7">
+                                                            <TextBlock.Foreground>
+                                                                <SolidColorBrush Color="#FFFF4400"/>
+                                                            </TextBlock.Foreground>
+                                                        </TextBlock>
+                                                    </Border>
+                                                </Grid>
+
+                                                <ControlTemplate.Triggers>
+                                                    <Trigger Property="IsMouseOver" Value="True">
+                                                        <Trigger.EnterActions>
+                                                            <BeginStoryboard>
+                                                                <Storyboard>
+                                                                    <ColorAnimation Storyboard.TargetName="BackgroundColor"
+                                                    Storyboard.TargetProperty="Color"
+                                                    To="#12FF4400" Duration="0:0:0.2"/>
+                                                                </Storyboard>
+                                                            </BeginStoryboard>
+                                                        </Trigger.EnterActions>
+                                                        <Trigger.ExitActions>
+                                                            <BeginStoryboard>
+                                                                <Storyboard>
+                                                                    <ColorAnimation Storyboard.TargetName="BackgroundColor"
+                                                    Storyboard.TargetProperty="Color"
+                                                    To="#00FF4400" Duration="0:0:0.2"/>
+                                                                </Storyboard>
+                                                            </BeginStoryboard>
+                                                        </Trigger.ExitActions>
+                                                    </Trigger>
+                                                </ControlTemplate.Triggers>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style.Setters>
+                            </Style>
+                        </Button.Style>
+                    </Button>
+                </Grid>
+            </Border>
+        </StackPanel>
         <Button Height="30" Margin="20,0" HorizontalAlignment="Right" Width="30" Opacity="0.2" Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.CloseTroubleshootViewCommand}">
             <Button.Style>
                 <Style TargetType="{x:Type Button}">
@@ -68,55 +242,7 @@
         <Border Grid.Row="2" Background="#FF211F2F" />
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="75,0">
-            <Button Content="Cancel" Height="30" Margin="5,0" FontFamily="Poppins" Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.CloseOptionViewCommand}">
-                <Button.Style>
-                    <Style TargetType="{x:Type Button}">
-                        <Style.Setters>
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type Button}">
-                                        <Grid>
-                                            <Border BorderBrush="#FF0084FF" BorderThickness="1" CornerRadius="4">
-                                                <Border.Background>
-                                                    <SolidColorBrush x:Name="BackgroundColor" Color="#000084FF"/>
-                                                </Border.Background>
-                                                <TextBlock Name="ButtonText" Text="{TemplateBinding Property=Content}" VerticalAlignment="Center" Margin="20,0">
-                                                    <TextBlock.Foreground>
-                                                        <SolidColorBrush Color="#FF0084FF"/>
-                                                    </TextBlock.Foreground>
-                                                </TextBlock>
-                                            </Border>
-                                        </Grid>
 
-                                        <ControlTemplate.Triggers>
-                                            <Trigger Property="IsMouseOver" Value="True">
-                                                <Trigger.EnterActions>
-                                                    <BeginStoryboard>
-                                                        <Storyboard>
-                                                            <ColorAnimation Storyboard.TargetName="BackgroundColor"
-                                                    Storyboard.TargetProperty="Color"
-                                                    To="#120084FF" Duration="0:0:0.2"/>
-                                                        </Storyboard>
-                                                    </BeginStoryboard>
-                                                </Trigger.EnterActions>
-                                                <Trigger.ExitActions>
-                                                    <BeginStoryboard>
-                                                        <Storyboard>
-                                                            <ColorAnimation Storyboard.TargetName="BackgroundColor"
-                                                    Storyboard.TargetProperty="Color"
-                                                    To="#000084FF" Duration="0:0:0.2"/>
-                                                        </Storyboard>
-                                                    </BeginStoryboard>
-                                                </Trigger.ExitActions>
-                                            </Trigger>
-                                        </ControlTemplate.Triggers>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style.Setters>
-                    </Style>
-                </Button.Style>
-            </Button>
         </StackPanel>
     </Grid>
 </UserControl>
