--- a/ClusterSurveillance/App.xaml
+++ b/ClusterSurveillance/App.xaml
@@ -30,6 +30,9 @@
             <DataTemplate DataType="{x:Type viewModelSettings:GeneralViewModel}">
                 <viewSettings:General/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModelSettings:BrokerSettingsViewModel}">
+                <viewSettings:BrokerSettingsView/>
+            </DataTemplate>
             <DataTemplate DataType="{x:Type viewModelSettings:ExperimentalFeaturesViewModel}">
                 <viewSettings:ExperimentalFeaturesView/>
             </DataTemplate>
