--- a/ClusterSurveillance/MVVM/View/Options/SoftwareUpdatesView.xaml
+++ b/ClusterSurveillance/MVVM/View/Options/SoftwareUpdatesView.xaml
@@ -60,8 +60,8 @@
                 </Button.Style>
             </Button>
             <TextBlock Text="Preferences" Grid.Row="0" VerticalAlignment="Center" Foreground="#FFFFFF" FontFamily="Poppins Medium" FontSize="16" Margin="0,10"/>
-            <ToggleButton Content="Automatically check for updates" Style="{StaticResource SettingsToggleButton}"/>
-            <ToggleButton Content="Always download updates" Style="{StaticResource SettingsToggleButton}"/>
+            <ToggleButton Content="Automatically check for updates" Style="{StaticResource SettingsToggleButton}" Cursor="Hand" IsChecked="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.Config.AutoCheckUpdates, UpdateSourceTrigger=PropertyChanged}"/>
+            <ToggleButton Content="Always download updates" Style="{StaticResource SettingsToggleButton}" IsChecked="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.Config.AutoDownloadUpdates, UpdateSourceTrigger=PropertyChanged}" Cursor="Hand"/>
         </StackPanel>
     </ScrollViewer>
 </UserControl>
