--- a/ClusterSurveillance/MainWindow.xaml
+++ b/ClusterSurveillance/MainWindow.xaml
@@ -20,13 +20,72 @@
         <viewModel:MainViewModel/>
     </Window.DataContext>
     <WindowChrome.WindowChrome>
-        <WindowChrome     
-        CaptionHeight="1"  
-        CornerRadius ="0"
-        ResizeBorderThickness="4"         
-        GlassFrameThickness="0">
-        </WindowChrome>
+        <WindowChrome CaptionHeight="55" ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}" />
     </WindowChrome.WindowChrome>
+    <Window.Resources>
+        <Style x:Key="TitleBarButtonStyle" TargetType="Button">
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
+            <Setter Property="IsTabStop" Value="False" />
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border
+					x:Name="border"
+					Background="Transparent"
+					BorderThickness="0"
+					SnapsToDevicePixels="true">
+                            <ContentPresenter
+						x:Name="contentPresenter"
+						Margin="0"
+						HorizontalAlignment="Center"
+						VerticalAlignment="Center"
+						Focusable="False"
+						RecognizesAccessKey="True" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter TargetName="border" Property="Background" Value="#12FFFFFF" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="TitleBarCloseButtonStyle" TargetType="Button">
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
+            <Setter Property="IsTabStop" Value="False" />
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border
+					x:Name="border"
+					Background="Transparent"
+					BorderThickness="0"
+					SnapsToDevicePixels="true">
+                            <ContentPresenter
+						x:Name="contentPresenter"
+						Margin="0"
+						HorizontalAlignment="Center"
+						VerticalAlignment="Center"
+						Focusable="False"
+						RecognizesAccessKey="True" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter TargetName="border" Property="Background" Value="#AAFF4242" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Grid Background="#272537">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"/>
@@ -49,7 +108,7 @@
                 </ContextMenu>
             </tb:TaskbarIcon.ContextMenu>
         </tb:TaskbarIcon>
-        <Border Background="#FF343148" Grid.ColumnSpan="2" Grid.Row="0" MouseLeftButtonDown="TitleBarLeftMouseDown" BorderBrush="#775A5961" BorderThickness="0,0,0,1">
+        <Border Background="#FF343148" Grid.ColumnSpan="2" Grid.Row="0" BorderBrush="#775A5961" BorderThickness="0,0,0,1">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="250"/>
@@ -61,15 +120,48 @@
                     <TextBlock Text="Pâtisserie" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontFamily="Poppins Medium" Foreground="White"/>
                 </StackPanel>
                 <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="1" Orientation="Horizontal">
-                    <RadioButton Height="35" MinWidth="35" Style="{StaticResource TitleButtonTheme}" Background="#11FFFFFF" Command="{Binding OptionViewCommand}" IsChecked="{Binding Path=OptionsIsChecked}"/>
-                    <RadioButton Height="35" MinWidth="35" Style="{StaticResource TitleButtonTheme}" Background="#11FFFFFF" Command="{Binding TroubleshootViewCommand}" IsChecked="{Binding TroubleshootIsChecked}"/>
+                    <RadioButton Height="35" MinWidth="35" Style="{StaticResource TitleButtonTheme}" Background="#12FFFFFF" Command="{Binding OptionViewCommand}" Foreground="White" IsChecked="{Binding Path=OptionsIsChecked}">
+                        <Path
+			                Width="35"
+			                Height="35"
+			                Data="M 18,11 27,20 M 18,20 27,11"
+			                Stroke="{Binding Path=Foreground,
+							 RelativeSource={RelativeSource AncestorType={x:Type RadioButton}}}"
+			                StrokeThickness="1" />
+                    </RadioButton>
+                    <RadioButton Height="35" MinWidth="35" Style="{StaticResource TitleButtonTheme}" Background="#12FFFFFF" Command="{Binding TroubleshootViewCommand}" IsChecked="{Binding TroubleshootIsChecked}"/>
                 </StackPanel>
                 <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top">
-                    <Button Height="30" Width="45" Click="Minimize">
-                        <svg:SVGImage Source="ClusterSurveillance;component/Images/cube.svg" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+                    <Button
+		                Click="Minimize"
+		                RenderOptions.EdgeMode="Aliased"
+		                Style="{StaticResource TitleBarButtonStyle}">
+                        <Path
+			                Width="46"
+			                Height="32"
+			                Data="M 18,15 H 28"
+			                Stroke="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+			                StrokeThickness="1" />
                     </Button>
-                    <Button Height="30" Width="45" Click="Maximize"/>
-                    <Button Height="30" Width="45" Click="Exit"/>
+                    <Button Name="maximizeButton" Click="Maximize" Style="{StaticResource TitleBarButtonStyle}">
+                        <Path   Width="46"
+			                    Height="32"
+			                    Data="M 18.5,10.5 H 27.5 V 19.5 H 18.5 Z"
+			                    Stroke="{Binding Path=Foreground,
+							    RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+			                    StrokeThickness="1" />
+                    </Button>
+                    <Button
+		                Click="Exit"
+		                Style="{StaticResource TitleBarCloseButtonStyle}">
+                        <Path
+			                Width="46"
+			                Height="32"
+			                Data="M 18,11 27,20 M 18,20 27,11"
+			                Stroke="{Binding Path=Foreground,
+							 RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+			                StrokeThickness="1" />
+                    </Button>
                 </StackPanel>
             </Grid>
         </Border>
