--- a/ClusterSurveillance/Theme/TitleBarButton.xaml
+++ b/ClusterSurveillance/Theme/TitleBarButton.xaml
@@ -5,6 +5,8 @@
         
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="Margin" Value="20,0,0,0"/>
+        <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
+        <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type RadioButton}">
